--- a/HalloApp.xcodeproj/xcshareddata/xcschemes/Notification Content Extension.xcscheme
+++ b/HalloApp.xcodeproj/xcshareddata/xcschemes/Notification Content Extension.xcscheme
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "1500"
-   version = "1.3">
+   LastUpgradeVersion = "1510"
+   wasCreatedForAppExtension = "YES"
+   version = "2.0">
    <BuildAction
       parallelizeBuildables = "YES"
       buildImplicitDependencies = "YES">
@@ -14,9 +15,23 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "329E03F7268247BC00C2D250"
-               BuildableName = "HalloAppClip.app"
-               BlueprintName = "HalloAppClip"
+               BlueprintIdentifier = "F4ED983C2B28D63000FC7BF3"
+               BuildableName = "Notification Content Extension.appex"
+               BlueprintName = "Notification Content Extension"
+               ReferencedContainer = "container:HalloApp.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "EAF3A1BE2334191E00805FF9"
+               BuildableName = "HalloApp.app"
+               BlueprintName = "HalloApp"
                ReferencedContainer = "container:HalloApp.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -26,71 +41,46 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      shouldUseLaunchSchemeArgsEnv = "YES">
-      <Testables>
-         <TestableReference
-            skipped = "NO">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "329E0410268247BE00C2D250"
-               BuildableName = "HalloAppClipTests.xctest"
-               BlueprintName = "HalloAppClipTests"
-               ReferencedContainer = "container:HalloApp.xcodeproj">
-            </BuildableReference>
-         </TestableReference>
-         <TestableReference
-            skipped = "NO">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "329E041B268247BE00C2D250"
-               BuildableName = "HalloAppClipUITests.xctest"
-               BlueprintName = "HalloAppClipUITests"
-               ReferencedContainer = "container:HalloApp.xcodeproj">
-            </BuildableReference>
-         </TestableReference>
-      </Testables>
+      shouldUseLaunchSchemeArgsEnv = "YES"
+      shouldAutocreateTestPlan = "YES">
    </TestAction>
    <LaunchAction
       buildConfiguration = "Debug"
-      selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
-      selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      launchStyle = "0"
+      selectedDebuggerIdentifier = ""
+      selectedLauncherIdentifier = "Xcode.IDEFoundation.Launcher.PosixSpawn"
+      launchStyle = "1"
+      askForAppToLaunch = "Yes"
       useCustomWorkingDirectory = "NO"
       ignoresPersistentStateOnLaunch = "NO"
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
-      allowLocationSimulation = "YES">
+      allowLocationSimulation = "YES"
+      launchAutomaticallySubstyle = "2">
       <BuildableProductRunnable
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "329E03F7268247BC00C2D250"
-            BuildableName = "HalloAppClip.app"
-            BlueprintName = "HalloAppClip"
+            BlueprintIdentifier = "EAF3A1BE2334191E00805FF9"
+            BuildableName = "HalloApp.app"
+            BlueprintName = "HalloApp"
             ReferencedContainer = "container:HalloApp.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
-      <EnvironmentVariables>
-         <EnvironmentVariable
-            key = "_XCAppClipURL"
-            value = "https://example.com"
-            isEnabled = "NO">
-         </EnvironmentVariable>
-      </EnvironmentVariables>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "External Beta"
       shouldUseLaunchSchemeArgsEnv = "YES"
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
-      debugDocumentVersioning = "YES">
+      debugDocumentVersioning = "YES"
+      launchAutomaticallySubstyle = "2">
       <BuildableProductRunnable
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "329E03F7268247BC00C2D250"
-            BuildableName = "HalloAppClip.app"
-            BlueprintName = "HalloAppClip"
+            BlueprintIdentifier = "EAF3A1BE2334191E00805FF9"
+            BuildableName = "HalloApp.app"
+            BlueprintName = "HalloApp"
             ReferencedContainer = "container:HalloApp.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
